tests/fixtures/should_fail/dec_ambig_user.bop
package app

import "dec_ambig_a.bop"
import "dec_ambig_b.bop"

@check
struct Foo {
    x: int32;
}
